[package]
name = "tron-lang"
version = "1.3.0"
edition = "2021"
authors = ["418e"]
description = "Open Source Programming Language"
documentation = "https://github.com/418e/Tron/wiki"
homepage = "https://tronlang.org/"
repository = "https://github.com/418e/Tron"
license = "MIT"

[dependencies]
num = "0.4.1"
rand = "0.8.5"
colored = "2.0.4"
config = "0.13.3"
hashbrown = "0.14.3"
