[package]
name = "tron-lang"
version = "2.5.0"
edition = "2021"
authors = ["418e"]
description = "Open Source Programming Language"
documentation = "https://github.com/418e/Tron/wiki"
homepage = "https://tronlang.org/"
repository = "https://github.com/418e/Tron"
license = "MIT"

[dependencies]
rand = "0.8.5"