[package]
name = "tron-lang"
version = "3.0.0"
edition = "2021"
authors = ["418e"]
description = "Open Source Programming Language"
documentation = "https://docs.tronlang.org"
homepage = "https://tronlang.org/"
repository = "https://github.com/418e/Tron"
readme= "README.md"
license-file = "LICENSE"

[dependencies]